--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -64,7 +64,7 @@
 
           <div class="flex-row xl:gap-4 w-full justify-between items-center flex">
             <!-- Navigation Menu (Desktop) -->
-            <nav class="relative z-10 transition-all duration-300 ease-in-out overflow-hidden"
+            <nav class="relative z-10 overflow-hidden"
               :class="searchDropdownOpen ? 'opacity-0 max-w-0' : 'opacity-100 max-w-full'">
               <div class="relative xl:block hidden">
                 <ul class="flex flex-1 justify-center items-center p-1 space-x-1 list-none text-neutral-700 group">
@@ -99,7 +99,7 @@
             <div x-ref="searchContainer"
               @click="closeMenu(); searchSlideOverOpen = false; if (!searchDropdownOpen) { searchDropdownOpen = true; $nextTick(() => $refs.searchInput.focus()); }"
               :class="searchDropdownOpen ? 'border-brand-primary-700 w-full' : 'w-56'"
-              class="cursor-text group xl:flex hidden items-center gap-2 px-4 py-2 bg-brand-background-secondary border border-brand-border hover:border-brand-primary-700 rounded-full transition-all duration-300 ease-in-out">
+              class="cursor-text group xl:flex hidden items-center gap-2 px-4 py-2 bg-brand-background-secondary border border-brand-border hover:border-brand-primary-700 rounded-full">
               <svg xmlns="http://www.w3.org/2000/svg" class="size-4 shrink-0 text-neutral-500 group-hover:text-brand-primary-700"
                 fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
@@ -425,15 +425,14 @@
                         </button>
                       </div>
                       <button @click="searchSlideOverOpen=false"
-                        class="shrink-0 p-2 rounded-full text-neutral-600 hover:bg-neutral-100">
+                        class="shrink-0 p-2 rounded-full text-brand-dark">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                           stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
                           <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
                         </svg>
                       </button>
                     </div>
-                </div>
-
+                  </div>
 
                   <!-- Content Area -->
                   <div class="flex-1 w-full py-4 px-4">
